fix(store): margin create horizontal scrollbar

--- a/store/src/app/pages/categories/categories.component.scss
+++ b/store/src/app/pages/categories/categories.component.scss
@@ -1,3 +1,8 @@
+.categories {
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
 app-product {
   display: flex;
   width: 100%;
